overflow for footer issue fixed

--- a/imports/ui/components/footer/footer.scss
+++ b/imports/ui/components/footer/footer.scss
@@ -42,7 +42,7 @@
 	background: white;
 	color: black;
 	padding: 30px;
-	margin: 0 10% 0 10%;
+	overflow:hidden;
 	text-align: center;
 
 	ul {
